Changed some Inspect Settings Changed settings Removed TONS of Inspect-errors ...