@@ -16,7 +16,7 @@
  ******************************************************************************/
 
 /**
- * 
+ *
  */
 package dba.options;
 
@@ -32,16 +32,13 @@ import java.util.Properties;
 /**
  * Options Class (singelton pattern) which stores all informations.
  * This class also includes the save and read options methods
- * 
+ *
  * @author Andreas Freitag
- * 
  */
 public class Options extends Observable {
   private Properties prop;
   private String language;
   private static Options instance = null;
-  // Options Folder and Files
-  final private File homeFolder;
   final private File optionsFolder;
   final private File optionsFile;
   final private File saveFolder;
@@ -53,73 +50,73 @@ public class Options extends Observable {
    * Constructor for the options class
    */
   private Options() {
-	availableLocale = new HashMap<>();
-	availableLocale.put("de", "Deutsch");
-	availableLocale.put("en", "English");
+    availableLocale = new HashMap<>();
+    availableLocale.put("de", "Deutsch");
+    availableLocale.put("en", "English");
 
-	prop = new Properties();
+    prop = new Properties();
 
-	// Set Locale
-	language = "en";
+    // Set Locale
+    language = "en";
 
-	// Show tipps
-	showTippsOnStartup = new Boolean(true);
+    // Show tipps
+    showTippsOnStartup = Boolean.TRUE;
 
-	// Files and Folders
-	homeFolder = new File(System.getProperty("user.home") + "/.dba");
-	// Options Folder and Files
-	optionsFolder = new File(homeFolder + "/Options");
-	optionsFile = new File(optionsFolder + "/dba.properties");
-	saveFolder = new File(homeFolder + "/Save");
-	exportFolder = new File(homeFolder + "/Export");
+    // Files and Folders
+    File homeFolder = new File(System.getProperty("user.home") + "/.dba");
+    // Options Folder and Files
+    optionsFolder = new File(homeFolder + "/Options");
+    optionsFile = new File(optionsFolder + "/dba.properties");
+    saveFolder = new File(homeFolder + "/Save");
+    exportFolder = new File(homeFolder + "/Export");
   }
 
   /**
    * Getter for save folder
-   * 
+   *
    * @return save folder file
    */
   public File getSaveFolder() {
-	return saveFolder;
+    return saveFolder;
   }
 
   /**
    * Getter for the singelton options (thread-save)
-   * */
+   */
   public synchronized static Options getInstance() {
-	if (instance == null) {
-	  synchronized (Options.class) {
-		instance = new Options();
-	  }
-	}
-	return instance;
+    if (instance == null) {
+      synchronized (Options.class) {
+        instance = new Options();
+      }
+    }
+    return instance;
   }
 
   /**
    * Returns the Location of the Folder containing the Option-Files
-   * 
+   *
    * @return OptionFile-FolderLocation
    */
   public File getOptionsFolder() {
-	return optionsFolder;
+    return optionsFolder;
   }
 
   /**
    * Returns the location of the OptionsFile
-   * 
+   *
    * @return OptionFile-Location
    */
   public File getOptionsFile() {
-	return optionsFile;
+    return optionsFile;
   }
 
   /**
    * Get the current language (en/de/...)
-   * 
+   *
    * @return language string
    */
   public String getLanguage() {
-	return language;
+    return language;
   }
 
   /**
@@ -127,19 +124,19 @@ public class Options extends Observable {
    */
   public void writeOptions() {
 
-	try {
-	  // Set the properties value
-	  prop.setProperty("language", language.toString());
+    try {
+      // Set the properties value
+      prop.setProperty("language", language);
 
-	  prop.setProperty("showTipOnStartup", showTippsOnStartup.toString());
+      prop.setProperty("showTipOnStartup", showTippsOnStartup.toString());
 
-	  // Save properties to DBN options folder
-	  prop.store(new FileOutputStream(optionsFile), "DBA options file");
+      // Save properties to DBN options folder
+      prop.store(new FileOutputStream(optionsFile), "DBA options file");
 
-	} catch (IOException ex) {
-	  super.notifyObservers(new Feedback("Unable to save options file",
-		  FeedbackEnum.FAILED));
-	}
+    } catch (IOException ex) {
+      super.notifyObservers(new Feedback("Unable to save options file",
+              FeedbackEnum.FAILED));
+    }
 
   }
 
@@ -147,80 +144,76 @@ public class Options extends Observable {
    * Reads all Options from the File
    */
   public void readOptions() {
-	try {
+    try {
 
-	  prop.load(new FileInputStream(optionsFile));
+      prop.load(new FileInputStream(optionsFile));
 
-	  language = prop.getProperty("language");
+      language = prop.getProperty("language");
 
-	  showTippsOnStartup = new Boolean(prop.getProperty("showTipOnStartup"));
+      showTippsOnStartup = Boolean.valueOf(prop.getProperty("showTipOnStartup"));
 
-	} catch (Exception ex) {
-	  super.notifyObservers(new Feedback("Unable to load options file",
-		  FeedbackEnum.FAILED));
-	}
+    } catch (Exception ex) {
+      super.notifyObservers(new Feedback("Unable to load options file",
+              FeedbackEnum.FAILED));
+    }
   }
 
   /**
    * Getter for the export folder
-   * 
+   *
    * @return Exportfolder file
    */
   public File getExportFolder() {
-	return exportFolder;
+    return exportFolder;
   }
 
   /**
    * Getter for the boolean to show tip of the day
-   * 
+   *
    * @return true/false
    */
   public Boolean getShowTippsOnStartup() {
-	return showTippsOnStartup;
+    return showTippsOnStartup;
   }
 
   /**
    * Setter for the boolean to show tip of the day
-   * 
-   * @param showTippsOnStartup
-   *          true or false
+   *
+   * @param showTippsOnStartup true or false
    */
   public void setShowTippsOnStartup(Boolean showTippsOnStartup) {
-	this.showTippsOnStartup = showTippsOnStartup;
+    this.showTippsOnStartup = showTippsOnStartup;
   }
 
   /**
-   * @param language
-   *          the language to set
+   * @param language the language to set
    */
   public void setLanguage(String language) {
-	this.language = language;
+    this.language = language;
   }
 
   /**
    * @return the availableLocale
    */
   public HashMap<String, String> getAvailableLocale() {
-	return availableLocale;
+    return availableLocale;
   }
 
   /**
    * Get the locale String (de/en/..) by full Locale
    * (Deutsch/English/...)
-   * 
-   * @param map
-   *          Hashmap
-   * @param value
-   *          String with Locale (Deutsch/English/...)
+   *
+   * @param map   Hashmap
+   * @param value String with Locale (Deutsch/English/...)
    * @return short Locale string (de/en/...)
    */
   public <T, E> T getKeyByLanguage(HashMap<T, E> map, E value) {
-	for (Entry<T, E> entry : map.entrySet()) {
-	  if (value.equals(entry.getValue())) {
-		return entry.getKey();
-	  }
-	}
-	return null;
+    for (Entry<T, E> entry : map.entrySet()) {
+      if (value.equals(entry.getValue())) {
+        return entry.getKey();
+      }
+    }
+    return null;
   }
 
 }
